Source/WebKit/NetworkProcess/mac/RemoteNetworkingContext.mm
@@ -46,12 +46,8 @@ namespace WebKit {
 void RemoteNetworkingContext::ensureWebsiteDataStoreSession(WebsiteDataStoreParameters&& parameters)
 {
     auto sessionID = parameters.networkSessionParameters.sessionID;
-    if (auto* session = NetworkStorageSession::storageSession(sessionID)) {
-        ASSERT(parameters.pendingCookies.isEmpty() || sessionID == PAL::SessionID::defaultSessionID());
-        for (const auto& cookie : parameters.pendingCookies)
-            session->setCookie(cookie);
+    if (NetworkStorageSession::storageSession(sessionID))
         return;
-    }
 
     String base;
     if (SessionTracker::getIdentifierBase().isNull())
